--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 plugins{
     id 'java'
 }
@@ -10,9 +11,9 @@ repositories{
 }
 
 dependencies{
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
-    implementation group: 'io.cucumber', name: 'cucumber-java', version: '4.2.0'
-    testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '4.2.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.5.0'
+    implementation 'io.cucumber:cucumber-java:7.11.2'
+    testImplementation 'io.cucumber:cucumber-junit:7.11.2'
 }
 
 test{
